Add canteens enum and view meals

--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_LoginPartial.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using AvansMealDeal.Domain.Models
+@inject SignInManager<MealDealUser> SignInManager
+@inject UserManager<MealDealUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
