Add meal package

--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Index.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Index.cshtml
@@ -11,4 +11,4 @@
     <h1>Alleen voor volwassenen: @mealPackage.AdultsOnly()</h1>
 }
 
-<a asp-area="" asp-controller="Meals" asp-action="Add">Voeg maaltijd toe</a>
+<a asp-area="" asp-controller="MealPackages" asp-action="Add">Voeg maaltijdpakket toe</a>
