--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_Layout.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_Layout.cshtml
@@ -25,6 +25,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="Index">Maaltijden</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="MealPackages" asp-action="Index">Maaltijdpakketten</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
