--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Areas/Identity/Pages/Account/Register.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Areas/Identity/Pages/Account/Register.cshtml
@@ -41,7 +41,7 @@
                 </select>
                 <span asp-validation-for="Input.EmployeeCanteenId" class="text-danger"></span>
             </div>
-            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Register</button>
+            <button id="registerSubmit" type="submit" class="w-100 btn btn-lg btn-primary">Registreer</button>
         </form>
     </div>
 </div>
