Add meals to package

--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Index.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Index.cshtml
@@ -3,12 +3,9 @@
 
 @foreach (var mealPackage in Model)
 {
-    <h1>Naam: @mealPackage.Name</h1>
-    <h1>Prijs: €@mealPackage.Price</h1>
-    <h1>Type: @mealPackage.MealPackageType</h1>
-    <h1>Deadline: @mealPackage.PickupDeadline</h1>
-    <h1>Adres: @mealPackage.Canteen.Address</h1>
-    <h1>Alleen voor volwassenen: @mealPackage.AdultsOnly()</h1>
+    @await Html.PartialAsync("_MealPackage", mealPackage)
+    <button>Bewerk</button>
+    <button>Verwijder</button>
 }
 
 <a asp-area="" asp-controller="MealPackages" asp-action="Add">Voeg maaltijdpakket toe</a>
