--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Add.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Add.cshtml
@@ -25,6 +25,24 @@
 		<input asp-for="PickupDeadline" />
 		<span asp-validation-for="PickupDeadline"></span>
 
+		<!-- meals to add to the meal package -->
+		<table>
+			<thead>
+				<tr>
+					<th>Foto</th>
+					<th>Naam</th>
+					<th>Bevat alcohol</th>
+					<th>Onderdeel van maaltijdpakket?</th>
+				</tr>
+			</thead>
+			<tbody>
+				@foreach (var meal in Model.Meals)
+				{
+					@await Html.PartialAsync("_MealPackageMeal", meal)
+				}
+			</tbody>
+		</table>
+
 		<button>Voeg toe</button>
 	</form>
 }
