Show which meals from the full meal list were added to the meal package

--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Add.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/Add.cshtml
@@ -36,7 +36,7 @@
 				</tr>
 			</thead>
 			<tbody>
-				@foreach (var meal in Model.Meals)
+				@foreach (var meal in Model.Meals.Select(x => new MealPackageMealViewModel(x, selected: false)))
 				{
 					@await Html.PartialAsync("_MealPackageMeal", meal)
 				}
