--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/_MealPackage.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/MealPackages/_MealPackage.cshtml
@@ -1,11 +1,12 @@
 ﻿@using AvansMealDeal.Domain.Models
+@using AvansMealDeal.UserInterface.WebApp.Helpers
 @model MealPackage
 
 <div>
-    <h1>Naam: @Model.Name</h1>
-    <h2>Prijs: €@Model.Price</h2>
-    <h3>Type: @Model.MealPackageType</h3>
-    <h4>Deadline: @Model.PickupDeadline</h4>
-    <h5>Adres: @Model.Canteen.Address</h5>
-    <h6>Alleen voor volwassenen: @Model.AdultsOnly()</h6>
+    <h3>Naam: @Model.Name</h3>
+    <h6>Prijs: €@Model.Price</h6>
+    <h6>Type: @HtmlHelpers.DisplayMealPackageType(Model.MealPackageType)</h6>
+    <h6>Deadline: @Model.PickupDeadline.DateTime <!--do not show timezone by discarding offset--></h6>
+    <h6>Adres kantine: @Model.Canteen.Address</h6>
+    <h6>Alleen voor volwassenen: @HtmlHelpers.DisplayDutchBoolean(Model.AdultsOnly())</h6>
 </div>
