--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_Layout.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_Layout.cshtml
@@ -1,4 +1,8 @@
-﻿<!DOCTYPE html>
+﻿@using AvansMealDeal.Domain.Models
+@using Microsoft.AspNetCore.Identity
+@inject UserManager<MealDealUser> UserManager
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="utf-8" />
@@ -14,7 +18,7 @@
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Avans Meal Deal</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
-                        aria-expanded="false" aria-label="Toggle navigation">
+                aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
@@ -22,12 +26,22 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Index">Home</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="Index">Maaltijden</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="MealPackages" asp-action="Index">Maaltijdpakketten</a>
-                        </li>
+                        @if (User?.Identity?.IsAuthenticated ?? false)
+                        {
+                            if (User.IsInRole(Role.Employee))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="Meals" asp-action="Index">Maaltijden</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeMealPackages" asp-action="Index">Maaltijdpakketten eigen kantine</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeMealPackages" asp-action="OtherCanteens">Maaltijdpakketten andere kantines</a>
+                                </li>
+                            }
+                        }
+                       
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
