--- a/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_Layout.cshtml
+++ b/AvansMealDeal/AvansMealDeal.UserInterface.WebApp/Views/Shared/_Layout.cshtml
@@ -43,8 +43,16 @@
                                     <a class="nav-link text-dark" asp-area="" asp-controller="EmployeeMealPackages" asp-action="OtherCanteens">Maaltijdpakketten andere kantines</a>
                                 </li>
                             }
+                            if (User.IsInRole(Role.Student))
+                            {
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="StudentMealPackages" asp-action="Index">Beschikbare maaltijdpakketten</a>
+                                </li>
+                                <li class="nav-item">
+                                    <a class="nav-link text-dark" asp-area="" asp-controller="StudentMealPackages" asp-action="MyReservations">Mijn gereserveerde maaltijdpakketten</a>
+                                </li>
+                            }
                         }
-                       
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
